--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //firebase
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-firestore'
+
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 }
